# yubi-no-butai

./: .gitignore  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AndroidOut.cpp  AndroidOut.h  BasicData.h  BitmapFont.cpp  BitmapFont.h  CMakeLists.txt  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  SourceFiles.cmake  TestLine.cpp  TestLine.h  TextureAsset.cpp  TextureAsset.h  Utility.cpp  Utility.h  main.cpp
app/src/main/cpp/Libraries/Minikin/: CMakeLists.txt
app/src/main/cpp/Libraries/Minikin/include/minikin/: Buffer.h  Characters.h  CmapCoverage.h  Constants.h  Debug.h  Emoji.h  FamilyVariant.h  Font.h  FontCollection.h  FontFamily.h  FontFeature.h  FontFileParser.h  FontStyle.h  FontVariation.h  GraphemeBreak.h  Hasher.h  HbUtils.h  Hyphenator.h  IcuUtils.h  Layout.h  LayoutCache.h  LayoutCore.h  LayoutPieces.h  LineBreakStyle.h  LineBreaker.h  LocaleList.h  LruCache.h  Macros.h  MeasuredText.h  Measurement.h  MinikinExtent.h  MinikinFont.h  MinikinFontFactory.h  MinikinPaint.h  MinikinRect.h  Point.h  Range.h  SparseBitSet.h  SystemFonts.h  U16StringPiece.h
app/src/main/cpp/Libraries/Minikin/src/: BidiUtils.cpp  BidiUtils.h  CmapCoverage.cpp  Debug.cpp  Emoji.cpp  FeatureFlags.h  Font.cpp  FontCollection.cpp  FontFamily.cpp  FontFeatureUtils.cpp  FontFileParser.cpp  FontUtils.cpp  FontUtils.h  GraphemeBreak.cpp  GreedyLineBreaker.cpp  GreedyLineBreaker.h  Hyphenator.cpp  HyphenatorMap.cpp  HyphenatorMap.h  Layout.cpp  LayoutCore.cpp  LayoutSplitter.h  LayoutUtils.cpp  LayoutUtils.h  LineBreaker.cpp  LineBreakerUtil.cpp  LineBreakerUtil.h  Locale.cpp  Locale.h  LocaleListCache.cpp  LocaleListCache.h  MeasuredText.cpp  Measurement.cpp  MinikinFontFactory.cpp  MinikinInternal.cpp  MinikinInternal.h  OptimalLineBreaker.cpp  OptimalLineBreaker.h  ScriptUtils.cpp  ScriptUtils.h  (+5 more)
app/src/main/cpp/audio/: AggregateAudioStream.cpp  AggregateAudioStream.h  AudioDecoder.cpp  AudioDecoder.h  AudioDecodingThread.h  AudioStream.h  PreloadedAudioStream.cpp  PreloadedAudioStream.h  PreloadedAudioTrack.cpp  PreloadedAudioTrack.h  StreamingAudioStream.cpp  StreamingAudioStream.h
app/src/main/cpp/text/: LruList.h  MemoryFont.cpp  MemoryFont.h  SpriteSet.cpp  SpriteSet.h  TextLayout.cpp  TextLayout.h  TextRenderer.cpp  TextRenderer.h  TextRenderingString.h
app/src/main/java/vn/name/leduyquang753/yubinobutai/: MainActivity.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
